# Grimoire

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  DESIGN.md  README.md  TRANSITION_BRANCH_PLAN_CLEAN.md  abandon_test.txt  debug_git.pl  flake.nix  golems-design.md  grimoire  repl.pl  session_work.txt  shell.nix
.claude/agents/: system-semantics-tester.md
.github/workflows/: ci.yml
src/: GRIMOIRE.md  assistant.py  common.py  core_rules.pl  ecs_kernel.pl  ecs_kernel.plt  fs.pl  fs.plt  git.pl  git.plt  grimoire.pl  grimoire.plt  interface.pl  llm_provider.py  logger.py  prolog_tool.py  repl.pl  run_tests.pl  session.pl  session.plt  tool_calling.py  utils.pl  utils.plt
src/db/: semantics.pl  semantics.plt  sqlite3.pl
src/db/tests/: db_test_entities.pl  semantics.pl
src/golems/: architect.pl  code_assistant.pl  code_reviewer.pl  documentation.pl  flake.nix  golems.py  grimoire-golems.nix  package.nix  project_manager.pl  python_bridge.pl  semantics.pl  semantics.plt  semantics_verifier.pl  test_planner.pl  test_runner.pl
src/golems/architect/: README.md  __init__.py  golem.py  semantics.pl  semantics.plt
src/golems/code_assistant/: README.md  __init__.py  golem.py  semantics.pl  semantics.plt
src/golems/code_reviewer/: README.md  __init__.py  golem.py  semantics.pl  semantics.plt
src/golems/documentation/: README.md  __init__.py  golem.py  semantics.pl  semantics.plt
src/golems/project_manager/: README.md  __init__.py  golem.py  semantics.pl  semantics.plt
src/golems/python/: pyproject.toml
src/golems/python/grimoire_golems/: __init__.py  janus_bridge.py  types.py
src/golems/python/grimoire_golems/core/: __init__.py  golem.py  manager.py
src/golems/python/grimoire_golems/providers/: __init__.py  anthropic.py  base.py  factory.py  openai.py
src/golems/python/grimoire_golems/tools/: __init__.py
src/golems/semantics_verifier/: README.md  __init__.py  golem.py  semantics.pl  semantics.plt
src/golems/test_planner/: README.md  __init__.py  golem.py  semantics.pl  semantics.plt
src/golems/test_runner/: README.md  __init__.py  golem.py  semantics.pl  semantics.plt
src/interface/: cli.pl  semantics.pl  semantics.plt
src/interface/api/: README.md  __init__.py  cli_python.py  flake.nix  grimoire_client.py  grimoire_interface.py  main.py  mcp_server.py  package.nix  pyproject.toml  rest_api.py  semantics.pl  semantics.plt
src/interface/api/grimoire/: __init__.py  cli.py  client.py  http.py  mcp.py
src/interface/api/tests/: conftest.py  test_api.py  test_cli.py  test_client.py  test_grimoire_interface.py  test_http.py  test_mcp.py  test_mcp_server.py
src/llm/: __init__.py  llm_provider.py  tool_calling.py
src/nix/: semantics.pl  semantics.plt  test_entities.pl
src/nix/templates/: flake.nix
src/nix/templates/cpp/: CMakeLists.txt  README.md  semantics.pl  semantics.plt
src/nix/templates/cpp/src/: hello.cpp  main.cpp
src/nix/templates/prolog-cpp-binding/: CMakeLists.txt  README.md  auxiliary.pl  flake.nix  semantics.pl  semantics.plt
src/nix/templates/prolog-cpp-binding/include/: cpp_bridge.hpp  data_structures.hpp  object_manager.hpp
src/nix/templates/prolog-cpp-binding/src/: cpp_bridge.cpp  data_structures.cpp  object_manager.cpp  type_conversions.cpp
src/nix/templates/pybind11/: .coverage  CMakeLists.txt  README.md  flake.nix  pybind11-demo.nix  pyproject.toml  semantics.pl  semantics.plt  setup.py
src/nix/templates/pybind11/include/: classes.h  functions.h  numpy_demo.h
src/nix/templates/pybind11/python/pybind_demo/: __init__.py
src/nix/templates/pybind11/src/: classes.cpp  functions.cpp  numpy_demo.cpp  pybind_module.cpp
src/nix/templates/pybind11/tests/: conftest.py  test_classes.py  test_containers.py  test_exceptions.py  test_functions.py  test_numpy.py
src/nix/templates/python/: .gitignore  README.md  main.py  pyproject.toml  semantics.pl  semantics.plt
src/nix/templates/python-bridge-pattern/python/: pyproject.toml
src/nix/templates/python-bridge-pattern/python/bridge_domain/: __init__.py  core.py
src/nix/templates/python-rest-api/: flake.nix  main.py  pyproject.toml  semantics.pl  semantics.plt
src/nix/templates/pytorch-extension/: .gitignore  README.md  flake.nix  pyproject.toml  pytorch-custom-ops.nix  requirements.txt  semantics.pl  semantics.plt  setup.py
src/nix/templates/pytorch-extension/benchmarks/: bench_fused_attention.py  bench_parametric_swish.py  conftest.py
src/nix/templates/pytorch-extension/csrc/: custom_activation.cpp  custom_activation.h  fused_attention.cpp  fused_attention.h  ops.cpp
src/nix/templates/pytorch-extension/python/pytorch_custom_ops/: __init__.py  ops.py
src/nix/templates/pytorch-extension/tests/: conftest.py  test_fused_attention.py  test_parametric_swish.py
src/nix/templates/react-fastapi/backend/: Dockerfile  main.py  pyproject.toml  semantics.pl  semantics.plt
src/nix/test_flake/: flake.nix
src/project/: semantics.pl  semantics.plt
src/project/tests/: semantics.pl  semantics.plt
src/prolog/: __init__.py  core_rules.pl  ecs.pl  fs.pl  git.pl  git.plt  grimoire.pl  interface.pl  mypaos.pl  nix.pl  prolog_tool.py  session.pl
src/prolog/db/: schema.sql  semantics.pl
src/prolog/nix/: semantics.pl  semantics.plt
src/prolog/project/: semantics.pl  semantics.plt
src/prolog/tests/: core_rules.plt  integration.plt  run_tests.pl  session.plt  session_cli.plt  spell_system.plt
src/prompts/: base_context.md  execution.md  exploration.md  planning.md
src/protocol_clients/: semantics.pl  semantics.plt
src/protocol_clients/http/: http_client.py  python_bridge.pl  semantics.pl  semantics.plt
src/tests/: core_rules.plt  core_rules_old.plt  crud_test_entities.pl  db_test_entities.pl  ecs_kernel_test_entities.pl  fs_test_entity.pl  git_test_entity.pl  golems_test_entities.pl  integration.plt  interface_session.plt  interface_test_entities.pl  project_test_entities.pl  protocol_clients_test_entities.pl  run_tests.pl  self_entity.plt  session.plt  session_cli.plt  spell_system.plt  template_instantiation.plt  utils_test_entities.pl
(+181 files in other folders)
