[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grimoire-golems"
version = "0.1.0"
description = "Grimoire Golems AI Agent Framework"
authors = [
    {name = "Grimoire Team", email = "team@grimoire.dev"}
]
dependencies = [
    "janus-swi",
    "pydantic",
    "pydantic-ai"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black"
]