[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template-python-project"
version = "0.1.0"
description = "Python template project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
template-python-project = "main:main"

[tool.setuptools]
packages = ["template_python_project"]

[tool.setuptools.package-dir]
"template_python_project" = "src"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
