[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "torch>=1.12.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-custom-ops"
version = "0.1.0"
description = "PyTorch C++ Extension Template with Custom Operations"
authors = [
    {name = "Grimoire Template", email = "template@grimoire.dev"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.12.0",
    "numpy>=1.21.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0"
]

[tool.setuptools.packages.find]
where = ["python"]
include = ["pytorch_custom_ops*"]

[tool.setuptools.package-data]
pytorch_custom_ops = ["*.py"]