[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-domain"
version = "0.1.0"
description = "Python-Prolog bridge pattern template"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "janus-swi",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black"
]